--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "opener http://localhost:8080/demo & http-server",
+    "start": "npm run build-js & opener http://localhost:8080/demo & http-server",
     "build": "npm run build-js",
     "build-js": "webpack && uglifyjs dist/app.js --screw-ie8 -c -m -o dist/app.js",
-    "watch-js": "webpack -w",
+    "watch-js": "webpack --watch --progress --colors",
     "watch": "npm run watch-js"
   },
   "author": "",
