--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build-js & opener http://localhost:8080/demo & http-server",
+    "start": "npm run build-js & opener http://localhost:80/ & http-server -p 80 -d False",
     "build": "npm run build-js",
     "build-js": "webpack && uglifyjs dist/app.js --screw-ie8 -c -m -o dist/app.js",
     "watch-js": "webpack --watch --progress --colors",
