--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build-js & opener http://localhost:80/ & http-server -p 80 -d False",
     "build": "npm run build-js",
-    "build-js": "webpack && uglifyjs dist/app.js --screw-ie8 -c -m -o dist/app.js",
+    "build-js": "webpack && uglifyjs dist/app.js --screw-ie8 -c -m -o canada/app.js",
     "watch-js": "webpack --watch --progress --colors",
     "watch": "npm run watch-js"
   },
